<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#a9a9a9">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_title"
        android:textSize="@dimen/title_size"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:padding="5dp"

        >
    </TextView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_alarm_title"
                android:textSize="@dimen/subtitle_size"
                android:padding="5dp"
                >
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_alarm_info"
                android:padding="5dp"
                >
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_alarm_title"
                android:textSize="@dimen/subtitle_size"
                android:padding="5dp"
                >
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_alarm_info"
                android:padding="5dp"
                >
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/puzzles_title"
                android:textSize="@dimen/subtitle_size"
                android:padding="5dp"
                >
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/puzzles_info"
                android:padding="5dp"
                >
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location_title"
                android:textSize="@dimen/subtitle_size"
                android:padding="5dp"
                >
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location_info"
                android:padding="5dp"
                >
            </TextView>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/doneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:layout_gravity="center_horizontal"
        >
    </Button>

</LinearLayout>
