<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#a9a9a9">

    <!--time-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <TimePicker
            android:id="@+id/pickTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner"/>
    </LinearLayout>

    <!--Day selection-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingLeft="15dp"
            android:paddingEnd="15dp"
            android:text="Day:"
            android:layout_weight="1"/>
        <!--Mon button-->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:id="@+id/mondayLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="MON"/>
            <CheckBox
                android:id="@+id/mondayCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mondayLabel"/>
        </RelativeLayout>
        <!--Tues button-->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tuesdayLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="TUES"/>
            <CheckBox
                android:id="@+id/tuesdayCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tuesdayLabel"/>
        </RelativeLayout>
        <!--Wed button-->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:id="@+id/wednesdayLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="WED"/>
            <CheckBox
                android:id="@+id/wednesdayCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/wednesdayLabel"/>
        </RelativeLayout>
        <!--Thur button-->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:id="@+id/thursdayLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="THURS"/>
            <CheckBox
                android:id="@+id/thursdayCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/thursdayLabel"/>
        </RelativeLayout>
        <!--Fri button-->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:id="@+id/fridayLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="FRI"/>
            <CheckBox
                android:id="@+id/fridayCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fridayLabel"/>
        </RelativeLayout>
        <!--Sat button-->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:id="@+id/saturdayLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="SAT"/>
            <CheckBox
                android:id="@+id/saturdayCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/saturdayLabel"/>
        </RelativeLayout>
        <!--Sun button-->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:id="@+id/sundayLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="SUN"/>
            <CheckBox
                android:id="@+id/sundayCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sundayLabel"/>
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/colorPrimaryDark" />
    </LinearLayout>

    <!--Challenge count-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="Select number of challenges:"/>
        <!--slider bar for number of challenges-->
        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp"
            android:paddingRight="20dp"
            android:paddingStart="20dp"
            android:max="5"/>
    </LinearLayout>

    <!--Challenge types-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
      
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="Select Puzzles:"/>
      
        <!--Memory puzzle -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">
            <CheckBox
                android:id="@+id/memoryCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="MEMORY" />
        </LinearLayout>
      
        <!--Math puzzle -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">
          
            <CheckBox
                android:id="@+id/mathCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
          
          <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="MATH" />
        </LinearLayout>
      
        <!--Tilt puzzle -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">
            <CheckBox
                android:id="@+id/tiltCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TILT" />
        </LinearLayout>
  </LinearLayout>
  
        <!--Alarm sound selection-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Select Sound:" />

            <RadioGroup
                android:id="@+id/soundRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <RadioButton
                    android:id="@+id/classic_radio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/classic_alarm" />

                <RadioButton
                    android:id="@+id/air_radio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/air_alarm" />

                <RadioButton
                    android:id="@+id/enterprise_radio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enterprise_alarm" />

                <RadioButton
                    android:id="@+id/william_radio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/william_alarm" />
            </RadioGroup>
        </LinearLayout>

    <!--Location-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingLeft="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:orientation="horizontal">
        <!--turn location on and off-->
        <Switch
            android:id="@+id/locationSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="LOCATION "/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_weight="1"
        android:paddingStart="15dp"
        android:paddingLeft="15dp"
        android:paddingEnd="15dp">

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="Delete"/>

        <Button
            android:id="@+id/speakButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add using voice"/>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickSwitch"
            android:text="save" />
    </LinearLayout>
</LinearLayout>
